# new_admin_panel_sprint_3

./: .env.example  .pre-commit-config.yaml  Dockerfile  create_index.sh  docker-compose.yml  dump.sql  main.py  pyproject.toml  requirements.txt  start.sh
etl/: etl_proccess.py  extract.py  load.py  models.py  transfrom.py
